[tool.poetry]
name = "idealpyproj"
version = "0.1.0"
description = ""
authors = ["Яковцев Андрей <aayakovtsev@sberbank.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
pylint = "^2.17.4"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

